--- a/.prettierrc
+++ b/.prettierrc
@@ -11,6 +11,9 @@
   "svelteStrictMode": true,
   "svelteBracketNewLine": false,
   "svelteIndentScriptAndStyle": false,
-  "plugins": ["./node_modules/prettier-plugin-svelte"],
+  "plugins": [
+    "./node_modules/prettier-plugin-svelte",
+    "./node_modules/prettier-plugin-solidity"
+  ],
   "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
