--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSE",
   "devDependencies": {
     "prettier": "2.4.1",
+    "prettier-plugin-solidity": "1.0.0-beta.18",
     "prettier-plugin-svelte": "2.4.0",
     "typescript": "4.4.4"
   }
