--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "hardhat test",
+    "build": "hardhat compile",
+    "deploy": "hardhat run scripts/deploy.ts",
+    "dev": "hardhat node"
   },
   "keywords": [],
   "author": "",
