--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -2,7 +2,7 @@
   "name": "@cryptogifts/ethereum",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "hardhat test",
     "build": "hardhat compile",
@@ -13,6 +13,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "ethers": "5.5.1"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@nomiclabs/hardhat-etherscan": "2.1.7",
@@ -22,20 +25,14 @@
     "@types/chai": "4.2.22",
     "@types/mocha": "9.0.0",
     "@types/node": "16.11.6",
-    "@typescript-eslint/eslint-plugin": "5.2.0",
-    "@typescript-eslint/parser": "5.2.0",
     "chai": "4.3.4",
     "dotenv": "10.0.0",
     "ethereum-waffle": "3.4.0",
-    "ethers": "5.5.1",
     "hardhat": "2.6.7",
     "hardhat-gas-reporter": "1.0.4",
-    "prettier": "2.4.1",
-    "prettier-plugin-solidity": "1.0.0-beta.18",
     "solhint": "3.3.6",
     "solidity-coverage": "0.7.17",
     "ts-node": "10.4.0",
-    "typechain": "6.0.1",
-    "typescript": "4.4.4"
+    "typechain": "6.0.1"
   }
 }
