--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -14,6 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ethersproject/abi": "5.5.0",
+    "@ethersproject/bytes": "5.5.0",
+    "@ethersproject/providers": "5.5.0",
     "ethers": "5.5.1"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "solhint": "3.3.6",
     "solidity-coverage": "0.7.17",
     "ts-node": "10.4.0",
-    "typechain": "6.0.1"
+    "typechain": "6.0.1",
+    "typescript": "4.4.4"
   }
 }
