--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Evgenij (Eugene) Beloded",
   "license": "UNLICENSE",
   "devDependencies": {
+    "npm-run-all": "4.1.5",
     "npm-watch": "0.11.0",
     "prettier": "2.4.1",
     "prettier-plugin-solidity": "1.0.0-beta.18",
