--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -31,8 +31,10 @@
     "@types/node": "16.11.6",
     "chai": "4.3.4",
     "dotenv": "10.0.0",
+    "eip1193-provider": "1.0.1",
     "ethereum-waffle": "3.4.0",
     "hardhat": "2.6.7",
+    "hardhat-deploy": "0.9.4",
     "hardhat-gas-reporter": "1.0.4",
     "solhint": "3.3.6",
     "solidity-coverage": "0.7.17",
