--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,9 +12,12 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "1.0.0-next.21",
     "@sveltejs/kit": "next",
+    "@tailwindcss/forms": "0.3.4",
+    "autoprefixer": "10.4.0",
     "svelte": "^3.42.6",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
+    "tailwindcss": "2.2.19",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
