--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "watch": {
-    "deploy:localhost": {
+    "compile": {
       "patterns": [
         "src"
       ],
