--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -19,6 +19,7 @@
     "deploy": "hardhat deploy",
     "deploy:localhost": "hardhat deploy --network localhost",
     "test+deploy": "run-s test deploy:localhost",
+    "test:watch": "chokidar \"test/*.ts\" \"src/*\" -c \"npm run test\"",
     "start": "hardhat node",
     "dev": "run-p start watch",
     "watch": "npm-watch"
