--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -31,7 +31,9 @@
     "@ethersproject/abi": "5.5.0",
     "@ethersproject/bytes": "5.5.0",
     "@ethersproject/providers": "5.5.0",
-    "ethers": "5.5.1"
+    "@openzeppelin/contracts": "4.3.2",
+    "ethers": "5.5.1",
+    "nanoid": "3.1.30"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.0.2",
