--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "deploy": "firebase deploy --only hosting",
-    "dev": "svelte-kit dev",
+    "dev": "svelte-kit dev --host 0.0.0.0 --port 4000",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
@@ -11,18 +11,32 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "1.0.0-next.21",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "1.0.0-next.195",
     "@tailwindcss/forms": "0.3.4",
     "autoprefixer": "10.4.0",
-    "svelte": "^3.42.6",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.9.4",
+    "eip1193-provider": "1.0.1",
+    "svelte": "3.44.1",
+    "svelte-check": "^2.2.8",
+    "svelte-preprocess": "4.9.8",
     "tailwindcss": "2.2.19",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "tslib": "2.3.1",
+    "typescript": "4.4.4"
   },
   "type": "module",
   "dependencies": {
-    "@cryptogifts/ethereum": "workspace:1.0.0"
+    "@alch/alchemy-web3": "1.1.7",
+    "@cryptogifts/ethereum": "workspace:1.0.0",
+    "@metamask/detect-provider": "1.2.0",
+    "@walletconnect/client": "2.0.0-beta.20",
+    "@walletconnect/qrcode-modal": "1.6.6",
+    "@walletconnect/web3-provider": "1.6.6",
+    "clsx": "1.1.1",
+    "ethers": "5.5.1",
+    "moralis": "0.0.128",
+    "ramda": "0.27.1",
+    "safe-ls": "1.0.0",
+    "svelte-trigger-action": "1.11.0",
+    "walletlink": "2.2.6",
+    "web3": "1.6.0"
   }
 }
