--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,6 +33,7 @@
     "clsx": "1.1.1",
     "ethers": "5.5.1",
     "moralis": "0.0.128",
+    "object-call-utils": "1.3.0",
     "ramda": "0.27.1",
     "safe-ls": "1.0.0",
     "svelte-trigger-action": "1.11.0",
