--- a/package.json
+++ b/package.json
@@ -5,6 +5,34 @@
   "keywords": [],
   "author": "Evgenij (Eugene) Beloded",
   "license": "UNLICENSE",
+  "scripts": {
+    "hoist-scripts": "./scripts/hoist-scripts.js",
+    "app:deploy": "pnpm -C packages/app deploy",
+    "app:dev": "pnpm -C packages/app dev",
+    "app:build": "pnpm -C packages/app build",
+    "app:preview": "pnpm -C packages/app preview",
+    "app:check": "pnpm -C packages/app check",
+    "app:check:watch": "pnpm -C packages/app check:watch",
+    "ethereum:test": "pnpm -C packages/ethereum test",
+    "ethereum:compile": "pnpm -C packages/ethereum compile",
+    "ethereum:compile:watch": "pnpm -C packages/ethereum compile:watch",
+    "ethereum:clean": "pnpm -C packages/ethereum clean",
+    "ethereum:deploy": "pnpm -C packages/ethereum deploy",
+    "ethereum:deploy:localhost": "pnpm -C packages/ethereum deploy:localhost",
+    "ethereum:test+deploy": "pnpm -C packages/ethereum test+deploy",
+    "ethereum:test:watch": "pnpm -C packages/ethereum test:watch",
+    "ethereum:start": "pnpm -C packages/ethereum start",
+    "ethereum:dev": "pnpm -C packages/ethereum dev",
+    "ethereum:watch": "pnpm -C packages/ethereum watch",
+    "functions:build": "pnpm -C packages/functions build",
+    "functions:build:watch": "pnpm -C packages/functions build:watch",
+    "functions:serve": "pnpm -C packages/functions serve",
+    "functions:emulator": "pnpm -C packages/functions emulator",
+    "functions:shell": "pnpm -C packages/functions shell",
+    "functions:start": "pnpm -C packages/functions start",
+    "functions:deploy": "pnpm -C packages/functions deploy",
+    "functions:logs": "pnpm -C packages/functions logs"
+  },
   "devDependencies": {
     "chokidar-cli": "3.0.0",
     "npm-run-all": "4.1.5",
