--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,11 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "echo",
-      "type": "shell",
-      "command": "echo Hello"
+      "label": "app:dev",
+      "type": "npm",
+      "script": "app:dev",
+      "isBackground": true,
+      "problemMatcher": []
     }
   ]
 }
