--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,18 @@
       "type": "npm",
       "script": "app:dev",
       "isBackground": true,
-      "problemMatcher": []
+      "problemMatcher": [],
+      "group": "none",
+      "runOptions": {
+        "instanceLimit": 1,
+        "runOn": "folderOpen"
+      },
+      "presentation": {
+        "echo": true,
+        "group": "dev",
+        "clear": true,
+        "panel": "dedicated"
+      }
     }
   ]
 }
