--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -18,11 +18,12 @@
     "compile:watch": "chokidar \"src/*\" -c \"hardhat compile\"",
     "clean": "hardhat clean",
     "deploy": "hardhat deploy",
+    "deploy:watch": "chokidar \"src/*\" -c \"hardhat deploy --network localhost\"",
     "deploy:localhost": "hardhat deploy --network localhost",
     "test+deploy": "run-s test deploy:localhost",
     "test:watch": "chokidar \"test/*.ts\" \"src/*\" -c \"hardhat test\"",
     "start": "hardhat node",
-    "dev": "run-p compile:watch test:watch",
+    "dev": "run-p start deploy:watch",
     "watch": "npm-watch"
   },
   "keywords": [],
