--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,6 +13,7 @@
     "@sveltejs/adapter-static": "1.0.0-next.21",
     "@sveltejs/kit": "1.0.0-next.195",
     "@tailwindcss/forms": "0.3.4",
+    "@tailwindcss/typography": "0.4.1",
     "autoprefixer": "10.4.0",
     "eip1193-provider": "1.0.1",
     "svelte": "3.44.1",
@@ -31,11 +32,13 @@
     "@walletconnect/qrcode-modal": "1.6.6",
     "@walletconnect/web3-provider": "1.6.6",
     "clsx": "1.1.1",
+    "daisyui": "1.16.2",
     "ethers": "5.5.1",
     "nanoid": "3.1.30",
     "object-call-utils": "1.3.0",
     "ramda": "0.27.1",
     "safe-ls": "1.0.0",
+    "svelte-feather-icons": "3.5.0",
     "svelte-trigger-action": "1.11.0",
     "walletlink": "2.2.6",
     "web3": "1.6.0"
