--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -37,6 +37,7 @@
     "nanoid": "3.1.30",
     "object-call-utils": "1.3.0",
     "ramda": "0.27.1",
+    "rxjs": "7.4.0",
     "safe-ls": "1.0.0",
     "svelte-feather-icons": "3.5.0",
     "svelte-trigger-action": "1.11.0",
