--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -15,13 +15,13 @@
   "scripts": {
     "test": "hardhat test",
     "compile": "hardhat compile",
-    "compile:watch": "chokidar \"src/*\" -c \"hardhat compile\"",
+    "compile:watch": "chokidar \"contracts/*\" -c \"hardhat compile\"",
     "clean": "hardhat clean",
     "deploy": "hardhat deploy",
-    "deploy:watch": "chokidar \"src/*\" -c \"hardhat deploy --network localhost\"",
+    "deploy:watch": "chokidar \"contracts/*\" -c \"hardhat deploy --network localhost\"",
     "deploy:localhost": "hardhat deploy --network localhost",
     "test+deploy": "run-s test deploy:localhost",
-    "test:watch": "chokidar \"test/*.ts\" \"src/*\" -c \"hardhat test\"",
+    "test:watch": "chokidar \"test/*.ts\" \"contracts/*\" -c \"hardhat test\"",
     "start": "hardhat node",
     "dev": "run-p start deploy:watch",
     "watch": "npm-watch"
