Integrate api into functions

--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -1,13 +1,8 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "outDir": "build",
-    "sourceMap": true,
-    "strict": true,
-    "target": "es2017"
+    "sourceRoot": "/",
+    "rootDir": ".."
   },
-  "compileOnSave": true,
+  "extends": "../../tsconfig.base.json",
   "include": ["src"]
 }
