--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,25 +1,31 @@
 {
   "name": "@cryptogifts/functions",
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc -w",
-    "serve": "run-p build:watch emulator",
+    "build": "tsc && ./scripts/build.js",
+    "build:watch": "./scripts/build.js --watch",
+    "tsc": "tsc",
+    "tsc:watch": "tsc --watch",
+    "dev": "run-p build:watch emulator",
     "emulator": "firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
+    "shell": "firebase functions:shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
     "node": "14"
   },
+  "type": "module",
   "main": "build/index.js",
   "dependencies": {
+    "@cryptogifts/api": "workspace:1.0.0",
     "firebase-admin": "10.0.0",
-    "firebase-functions": "3.16.0"
+    "firebase-functions": "3.16.0",
+    "my-kit-lib": "0.0.3",
+    "object-call-utils": "1.3.0"
   },
   "devDependencies": {
-    "typescript": "4.4.4"
+    "esbuild": "0.13.14",
+    "typescript": "4.5.2"
   },
   "private": true
 }
