Set node engine to 14

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "keywords": [],
+  "engines": {
+    "node": "14"
+  },
   "author": "Evgenij (Eugene) Beloded",
   "license": "UNLICENSE",
   "scripts": {
