--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
     "module": "es2020",
     "lib": ["es2020", "DOM"],
-    "target": "es2020",
     /**
 			svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
 			to enforce using \`import type\` instead of \`import\` for Types.
@@ -17,6 +15,7 @@
 			*/
     "sourceMap": true,
     "esModuleInterop": true,
+    "noUnusedLocals": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
@@ -26,8 +25,13 @@
       "svelte/transition": ["./node_modules/svelte/transition"],
       "svelte/store": ["./node_modules/svelte/store"],
       "$lib": ["src/lib"],
-      "$lib/*": ["src/lib/*"]
-    }
+      "$lib/*": ["src/lib/*"],
+      "@cryptogifts/api": ["../api"]
+    },
+    "rootDir": "..",
+    "emitDeclarationOnly": true
   },
+  "references": [{ "path": "../api" }],
+  "extends": "../../tsconfig.base.json",
   "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
 }
