--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -32,6 +32,7 @@
     "@walletconnect/qrcode-modal": "1.6.6",
     "@walletconnect/web3-provider": "1.6.6",
     "clsx": "1.1.1",
+    "copy-to-clipboard": "3.3.1",
     "daisyui": "1.16.2",
     "ethers": "5.5.1",
     "firebase": "9.5.0",
