--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ethereum:compile:watch": "pnpm -C packages/ethereum compile:watch",
     "ethereum:clean": "pnpm -C packages/ethereum clean",
     "ethereum:deploy": "pnpm -C packages/ethereum deploy",
+    "ethereum:deploy:watch": "pnpm -C packages/ethereum deploy:watch",
     "ethereum:deploy:localhost": "pnpm -C packages/ethereum deploy:localhost",
     "ethereum:test+deploy": "pnpm -C packages/ethereum test+deploy",
     "ethereum:test:watch": "pnpm -C packages/ethereum test:watch",
@@ -29,10 +30,11 @@
     "ethereum:watch": "pnpm -C packages/ethereum watch",
     "functions:build": "pnpm -C packages/functions build",
     "functions:build:watch": "pnpm -C packages/functions build:watch",
-    "functions:serve": "pnpm -C packages/functions serve",
+    "functions:tsc": "pnpm -C packages/functions tsc",
+    "functions:tsc:watch": "pnpm -C packages/functions tsc:watch",
+    "functions:dev": "pnpm -C packages/functions dev",
     "functions:emulator": "pnpm -C packages/functions emulator",
     "functions:shell": "pnpm -C packages/functions shell",
-    "functions:start": "pnpm -C packages/functions start",
     "functions:deploy": "pnpm -C packages/functions deploy",
     "functions:logs": "pnpm -C packages/functions logs"
   },
