--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@cryptogifts/api",
   "version": "1.0.0",
-  "main": "index.ts"
+  "main": "index.ts",
+  "dependencies": {
+    "ethers": "5.5.1"
+  }
 }
