--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "chokidar-cli": "3.0.0",
+    "firebase-tools": "9.23.0",
     "npm-run-all": "4.1.5",
     "npm-watch": "0.11.0",
     "prettier": "2.4.1",
