--- a/.github/workflows/hosting.yml
+++ b/.github/workflows/hosting.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-node-pnpm-cache
-      - run: pnpm build
+      - run: pnpm app:build
       - uses: actions/upload-artifact@v2
         with:
           name: app
