--- a/.github/workflows/functions.yml
+++ b/.github/workflows/functions.yml
@@ -3,6 +3,8 @@ on:
   workflow_dispatch:
 
   push:
+    branches:
+      - main
     paths:
       - packages/functions/**
       - packages/api/**
