--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,14 @@
   },
   "hosting": {
     "public": "packages/app/build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "trailingSlash": false,
+    "cleanUrls": true,
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/200.html"
+      }
+    ]
   }
 }
