--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -19,6 +19,7 @@
   "main": "build/index.js",
   "dependencies": {
     "@cryptogifts/api": "workspace:1.0.0",
+    "ethers": "5.5.1",
     "firebase-admin": "10.0.0",
     "firebase-functions": "3.16.0",
     "object-call-utils": "1.3.0"
