--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -17,6 +17,7 @@
   },
   "type": "module",
   "main": "build/index.js",
+  "types": "types.d.ts",
   "dependencies": {
     "@cryptogifts/api": "workspace:1.0.0",
     "ethers": "5.5.1",
