--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "2.4.1",
     "prettier-plugin-solidity": "1.0.0-beta.19",
     "prettier-plugin-svelte": "2.5.0",
+    "svelte": "3.44.2",
     "typescript": "4.5.2"
   }
 }
