--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -19,10 +19,13 @@
   "main": "build/index.js",
   "types": "types.d.ts",
   "dependencies": {
+    "@cryptogifts/ethereum": "workspace:1.0.0",
+    "dotenv": "10.0.0",
     "ethers": "5.5.1",
     "firebase-admin": "10.0.0",
     "firebase-functions": "3.16.0",
-    "object-call-utils": "1.3.0"
+    "object-call-utils": "1.3.0",
+    "rxjs": "7.4.0"
   },
   "devDependencies": {
     "esbuild": "0.13.15",
