--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "test": "hardhat test",
+    "console": "hardhat console",
     "compile": "hardhat compile",
     "compile:watch": "chokidar \"contracts/*\" -c \"hardhat compile\"",
     "clean": "hardhat clean",
