--- a/.github/workflows/hosting.yml
+++ b/.github/workflows/hosting.yml
@@ -14,6 +14,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    env:
+      FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      RINKEBY_URL: ${{ secrets.RINKEBY_URL }}
+      ROPSTEN_URL: ${{ secrets.ROPSTEN_URL }}
+      KOVAN_URL: ${{ secrets.KOVAN_URL }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-node-pnpm-cache
