--- a/.github/workflows/hosting.yml
+++ b/.github/workflows/hosting.yml
@@ -41,6 +41,8 @@ jobs:
     env:
       FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
     steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/setup-node-pnpm-cache
       - uses: actions/download-artifact@v2
         with:
           name: app
