--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
     "@sveltejs/kit": "1.0.0-next.195",
     "@tailwindcss/forms": "0.3.4",
     "@tailwindcss/typography": "0.4.1",
+    "@types/ramda": "0.27.53",
     "autoprefixer": "10.4.0",
     "eip1193-provider": "1.0.1",
     "postcss": "8.4.1",
