--- a/packages/ethereum/package.json
+++ b/packages/ethereum/package.json
@@ -41,6 +41,7 @@
     "rxjs": "7.4.0"
   },
   "devDependencies": {
+    "@ethersproject/abstract-provider": "5.5.1",
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@nomiclabs/hardhat-etherscan": "2.1.8",
     "@nomiclabs/hardhat-waffle": "2.0.1",
