Include env variables in bundled functions code

--- a/.github/workflows/functions.yml
+++ b/.github/workflows/functions.yml
@@ -7,7 +7,7 @@ on:
       - main
     paths:
       - packages/functions/**
-      - packages/api/**
+      - packages/ethereum/**
       - .github/workflows/functions.yml
 
 jobs:
